--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,253 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+    font-weight: 10px;
+    font-style: normal;
+    margin: 0;
+    padding: 0;
+    background-image: url(painel\ fundo.png);
+    background-size: cover;
+  }
+  
+  .logo {
+    width: 200px;
+    height: auto;/
+  }
+  
+  nav#jorge ul {
+    list-style: none;
+    text-transform: uppercase;
+    position: absolute;
+    top: 20px;
+    left: 1000px;
+  }
+  
+  nav#jorge li {
+    display: inline-block;
+    background-color: #ffa39c;
+    padding: 10px;
+    margin: 2px;
+    border-radius: 15px
+  }
+  
+  nav#jorge h1 {
+    display: none;
+  }
+  
+  nav#jorge {
+    display: block;
+  }
+  
+  nav#jorge li:hover {
+    background-color: #986561;
+    transition: background-color 1s;
+  }
+  
+  nav#jorge a {
+    color: #000000;
+    text-decoration: none;
+  }
+  
+  nav#jorge a:hover {
+    color: #ffffff;
+    text-decoration: underline;
+  }
+  
+  
+  .maicon {
+    max-width: 500px;
+    margin: 0px auto;
+  }
+  
+  p {
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
+    font-weight: 10px;
+    font-style: italic;
+    margin: 0;
+    padding: 0;
+    line-height: 1.5;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -webkit-line-clamp: 8;
+  }
+  
+  .container {
+    max-width: 500px;
+    margin: 50px auto;
+  }
+  
+  .contact-form {
+    background-color: #383333;
+    padding: 5%;
+    border-radius: 15px;
+    border: 4px solid #2c2d30;
+    box-shadow: 0px 0px 5px #000;
+  }
+  
+  .contact-form input[type="text"],
+  .contact-form input[type="email"],
+  .contact-form textarea {
+    background-color: #4f5054;
+    width: 90%;
+    padding: 10px;
+    margin-bottom: 5px;
+    border: 4px solid #55575e;
+    border-radius: 5px;
+    resize: vertical;
+    color: white;
+  }
+  
+  input[type="text"]::placeholder {
+    color: #ffffff; 
+  }
+  
+  input[type="email"]::placeholder {
+    color: #fefbfb; 
+  }
+  textarea::placeholder {
+    color: #ffffff; 
+  }
+  
+  .contact-form button {
+  
+    background-color: #044a10;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 2px #2b2b2b;
+  
+  }
+  
+  .contact-form button:hover {
+    background-color: #03300b;
+  }
+  
+  .contact-form h2 {
+    color: white;
+  }
+  
+  .group {
+    background-color: #f9f9f9;
+    box-shadow: 0px 0px 2px;
+  }
+  
+  header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+  }
+  
+  header h1 {
+    margin: 0;
+    font-size: 32px;
+  }
+  
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav ul li {
+    display: inline;
+    margin-right: 20px;
+  }
+  
+  nav ul li a {
+    text-decoration: none;
+    color: #fff;
+  }
+  
+  .catalogo {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 20px;
+  }
+  
+  .produto-card {
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 25%;
+    margin-bottom: 20px;
+    transition: transform 0.3s;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 50px;
+    box-shadow: 0px 0px 2px;
+  }
+  
+  .produto-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  }
+  
+  .produto-card img {
+    width: 45%;
+    height: auto;
+    object-fit: cover;
+    position: absolute;
+    right: 15px;
+  }
+  
+  .produto-info {
+    padding: 20px;
+  }
+  
+  .produto-info h2 {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 24px;
+  }
+  
+  .produto-info p {
+    margin: 10px 0;
+    font-size: 16px;
+  }
+  
+  .produto-info .descricao {
+    color: #666;
+  }
+  
+  .produto-info .preco {
+    font-weight: bold;
+    font-size: 18px;
+    color: #a3a3a3;
+  }
+  
+  .produto-card button {
+    display: block;
+    width: 30%;
+    background-color: #262626;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 10px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+  }
+  
+  .produto-card button:hover {
+    background-color: #141414;
+  }
+  
+  footer {
+    background-color: #333;
+    color: #fff;
     text-align: center;
-    background-color: #f0f0f0;
-}
-h1 {
-    color: #9b111199;
-}
+    padding: 20px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
