adicionando botao carrinho

--- a/style.css
+++ b/style.css
@@ -251,3 +251,53 @@ body {
     bottom: 0;
     width: 100%;
   }
+
+  .botao-link {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #ffa39c;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+
+  .botao-link:hover {
+    background-color: #f38780;
+  }
+
+  .carrinho {
+    background-color: #ffa39c;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+
+  .carrinho:hover {
+    background-color: #f38780;
+  }
+  
+  .carrinho i {
+    margin-right: 8px;
+  }
+
+
+
+  .quantidade {
+    background-color: red;
+    color: white;
+    font-weight: bold;
+    padding: 5px 10px;
+    border-radius: 50%;
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    font-size: 14px;
+  }
