--- a/style.css
+++ b/style.css
@@ -268,6 +268,37 @@ body {
     background-color: #f38780;
   }
 
+  .botao-voltar {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #ffa39c;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+
+  .botao-voltar:hover {
+    background-color: #f38780;
+  }
+
+  .botao-concluir {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #21a027;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 16px;
+  }
+
+  .botao-concluir:hover {
+    background-color: #156e1a;
+  }
+
+
   .carrinho {
     background-color: #ffa39c;
     color: rgb(0, 0, 0);
