--- a/style.css
+++ b/style.css
@@ -387,3 +387,81 @@ body {
     color: #777;
     margin-top: 20px;
 }
+
+
+#calculoFrete {
+  margin: 20px;
+  padding: 15px;
+  border: 1px solid #ddd;
+  width: 300px;
+  border-radius: 8px;
+  font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
+}
+
+#calculoFrete label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+#calculoFrete input[type="text"] {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  font-size: 1rem;
+}
+
+#calculoFrete button {
+  width: 100%;
+  padding: 8px;
+  font-size: 1rem;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+#calculoFrete button:hover {
+  background-color: #45a049;
+}
+
+#valorFrete {
+  margin-top: 10px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #333;
+  font-family: Arial, sans-serif;
+}
+
+
+
+.carrossel {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.imagens-carrossel {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.imagens-carrossel img {
+  width: 1920px; /* Define a largura das imagens para ocupar toda a largura da viewport */
+  height: 1080px; /* Opcional: define altura das imagens para ocupar toda a altura da viewport */
+  object-fit: cover; /* Ajusta a imagem para cobrir o espaço sem distorcer */
+}
+
+.anterior {
+  left: 20px;
+}
+
+.proximo {
+  right: 20px;
+}
