--- a/style.css
+++ b/style.css
@@ -7,8 +7,24 @@ body {
     padding: 0;
     background-image: url(painel\ fundo.png);
     background-size: cover;
+    padding-top: 60px;
   }
   
+  header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.main-content {
+    margin-top: 130px;
+}
+
   .logo {
     width: 200px;
     height: auto;/
@@ -43,7 +59,6 @@ body {
   background-color: #ffffff;
   border-radius: 8px;
 }
-
 
   nav#jorge ul {
     list-style: none;
