--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     background-image: url(painel\ fundo.png);
     background-size: cover;
     padding-top: 60px;
-  }
+}
   
   header {
     background-color: #333;
@@ -22,7 +22,7 @@ body {
 }
 
 .main-content {
-    margin-top: 130px;
+    margin-top: 130px
 }
 
   .logo {
@@ -484,14 +484,11 @@ body {
   font-family: Arial, sans-serif;
 }
 
-
-
-
 .promo-alert {
   position: fixed;
   top: 10%;
   left: 50%;
-  transform: translate(-50%, -50%); /* Centraliza o alerta na tela */
+  transform: translate(-50%, -50%);
   background-color: #dbca0c;
   color: rgb(0, 0, 0);
   padding: 20px 30px;
@@ -503,14 +500,19 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  visibility: hidden; /* Inicia oculto */
+  visibility: hidden;
   transition: opacity 0.6s ease, transform 0.6s ease;
 }
 
 .promo-alert.show {
   opacity: 1;
   visibility: visible;
-  transform: translateX(-50%) translateY(20px); /* Ativa o movimento para baixo */
+  transform: translateX(-50%) translateY(20px);
+}
+
+.promo-message {
+  flex: 1;
+  padding-right: 20px;
 }
 
 @keyframes slideDownFade {
@@ -523,10 +525,40 @@ body {
       opacity: 1;
   }
 }
-.promo-message {
+
+.alert-addCarrinho {
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #419d2a;
+  color: rgb(255, 255, 255);
+  padding: 20px 30px;
+  text-align: center;
+  font-size: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  visibility: hidden;
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.alert-addCarrinho.show {
+  opacity: 1;
+  visibility: visible;
+  transform: translateX(-50%) translateY(20px);
+}
+
+.addCarrinhoMessage {
   flex: 1;
   padding-right: 20px;
 }
+
+
+
 
 .close-btn {
   background-color: transparent;
@@ -555,6 +587,6 @@ body {
 }
 
 #barraPesquisa::placeholder {
-  color: #888; /* Muda a cor do placeholder */
-  opacity: 1;  /* Garantir que o placeholder seja visível */
+  color: #888;
+  opacity: 1; 
 }
