--- a/style.css
+++ b/style.css
@@ -205,84 +205,96 @@ body {
   }
   
   .catalogo {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    gap: 20px;
+    margin-top: 20px;
+    justify-content: center; 
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto; 
+}
+
+
+  .pesquisa-container {
+    margin-bottom: 20px;
+}
+
+.produtos-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 20px;
-  }
-  
-  .produto-card {
+    gap: 20px;
+    justify-content: center;
+}
+
+.produto-card {
     background-color: #f9f9f9;
     border: 1px solid #ddd;
     border-radius: 5px;
     overflow: hidden;
-    width: 25%;
-    margin-bottom: 20px;
+    width: 300px;
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
     position: relative;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 50px;
-    box-shadow: 0px 0px 2px;
-  }
-  
-  .produto-card:hover {
+}
+
+.produto-card:hover {
     transform: translateY(-5px);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  }
-  
-  .produto-card img {
-    width: 45%;
+}
+
+.produto-card img {
+    width: 100%;
     height: auto;
     object-fit: cover;
-    position: absolute;
-    right: 15px;
-  }
-  
-  .produto-info {
+}
+
+.produto-info {
     padding: 20px;
-  }
-  
-  .produto-info h2 {
+    text-align: center;
+}
+
+.produto-info h2 {
     margin-top: 0;
     margin-bottom: 10px;
-    font-size: 24px;
-  }
-  
-  .produto-info p {
+    font-size: 20px;
+}
+
+.produto-info p {
     margin: 10px 0;
     font-size: 16px;
-  }
-  
-  .produto-info .descricao {
+}
+
+.produto-info .descricao {
     color: #666;
-  }
-  
-  .produto-info .preco {
+}
+
+.produto-info .preco {
     font-weight: bold;
     font-size: 18px;
     color: #a3a3a3;
-  }
-  
-  .produto-card button {
-    display: block;
-    width: 30%;
+}
+
+.produto-card button {
     background-color: #262626;
     color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 10px 10px;
-    font-size: 18px;
+    padding: 10px;
+    font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s;
-    position: absolute;
-    bottom: 30px;
-    right: 30px;
-  }
-  
-  .produto-card button:hover {
+    margin-top: 10px;
+}
+
+.produto-card button:hover {
     background-color: #141414;
-  }
+}
+
   
   footer {
     background-color: #333;
